[gd_scene load_steps=5 format=3 uid="uid://c1uhl4nquej0w"]

[ext_resource type="Script" path="res://scenes/meteor.gd" id="1_1uplf"]
[ext_resource type="Texture2D" uid="uid://gr7ce83fgmoc" path="res://graphic/meteor_2.png" id="1_a633o"]
[ext_resource type="AudioStream" uid="uid://bfhm652vpf41l" path="res://audio/8bit_expl_medium_22.wav" id="3_aex82"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nyfsl"]
radius = 45.0111

[node name="Meteor" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_1uplf")

[node name="SprMeteorSmall" type="Sprite2D" parent="."]
position = Vector2(2, -2)
texture = ExtResource("1_a633o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, 1)
shape = SubResource("CircleShape2D_nyfsl")

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_aex82")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
